<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:orientation="horizontal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/mora_game"
                android:textAlignment="center"
                android:textSize="48sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:orientation="horizontal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="86dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="205dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/computer"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textSize="34sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="205dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/player"
                    android:textAlignment="center"
                    android:textSize="34sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="374dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="205dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="149dp"
                    tools:srcCompat="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/txtCom"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/wait_player"
                    android:textAlignment="center"
                    android:textSize="34sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="205dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/btnScissor"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="#00000000"
                    android:scaleType="fitCenter"
                    tools:srcCompat="@drawable/scissor"/>

                <ImageButton
                    android:id="@+id/btnRock"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="#00000000"
                    android:scaleType="fitCenter"
                    tools:srcCompat="@drawable/rock"/>

                <ImageButton
                    android:id="@+id/btnPaper"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="#00000000"
                    android:scaleType="fitCenter"
                    tools:srcCompat="@drawable/paper"/>



            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="0dp"
                android:layout_height="62dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/play_choose_a_button"
                android:textAlignment="center"
                android:textSize="34sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/txtResult"
            android:layout_width="match_parent"
            android:layout_height="166dp"
            android:gravity="center"
            android:textAlignment="center"
            android:textSize="34sp" />
    </LinearLayout>
</LinearLayout>